--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
 # Created by .ignore support plugin (hsz.mobi)
 .sass-cache
-dist
-app.js
-index.html
-styles.css
-styles.js
+public/app.js
+public/index.html
+public/styles.css
+public/styles.js
